[gd_scene load_steps=25 format=3 uid="uid://c6p7iyf0nyhvi"]

[ext_resource type="Script" uid="uid://b0tegrq10ko3n" path="res://scripts/character_body_2d.gd" id="1_jej6c"]
[ext_resource type="Texture2D" uid="uid://fp7wlk7nhyb7" path="res://assets/anims/mc_idle/idle00.png" id="2_a38lo"]
[ext_resource type="Texture2D" uid="uid://hq2cwv1qs6s6" path="res://assets/anims/mc_walk/walk00.png" id="2_f1ej7"]
[ext_resource type="Texture2D" uid="uid://bdc7a2rimdbnx" path="res://assets/anims/mc_idle/idle01.png" id="3_4ni07"]
[ext_resource type="Texture2D" uid="uid://fsr1gbb8jris" path="res://assets/anims/mc_walk/walk01.png" id="3_oprun"]
[ext_resource type="Texture2D" uid="uid://uc7vmcyipo7g" path="res://assets/anims/mc_walk/walk02.png" id="4_a8ls1"]
[ext_resource type="Texture2D" uid="uid://5igvag0aa2sd" path="res://assets/anims/mc_idle/idle02.png" id="4_l71n6"]
[ext_resource type="Texture2D" uid="uid://bve2h8b4smaf3" path="res://assets/anims/mc_idle/idle03.png" id="5_ke2ow"]
[ext_resource type="Texture2D" uid="uid://c5hachfqmcle" path="res://assets/anims/mc_walk/walk03.png" id="5_qfm1y"]
[ext_resource type="Texture2D" uid="uid://cg8v78umicxh2" path="res://assets/anims/mc_walk/walk04.png" id="6_fulsm"]
[ext_resource type="Texture2D" uid="uid://byd74dnm0g7fi" path="res://assets/anims/mc_idle/idle04.png" id="6_ujl30"]
[ext_resource type="Texture2D" uid="uid://cg727b5g1wm0f" path="res://assets/anims/mc_walk/walk05.png" id="7_4r5pv"]
[ext_resource type="Texture2D" uid="uid://d13ryov7mx3k3" path="res://assets/anims/mc_idle/idle05.png" id="7_31cv2"]
[ext_resource type="Texture2D" uid="uid://bj7145wd31gg7" path="res://assets/anims/mc_walk/walk06.png" id="8_60mlk"]
[ext_resource type="Texture2D" uid="uid://b461lug86pp72" path="res://assets/anims/mc_idle/idle06.png" id="8_pf23h"]
[ext_resource type="Texture2D" uid="uid://wblpdo1gq4ak" path="res://assets/anims/mc_idle/idle07.png" id="9_dt7fs"]
[ext_resource type="Texture2D" uid="uid://drraxj5d5bp4n" path="res://assets/anims/mc_walk/walk07.png" id="9_i4ail"]
[ext_resource type="Texture2D" uid="uid://5ui7ltkxc6kd" path="res://assets/anims/mc_walk/walk08.png" id="10_a38lo"]
[ext_resource type="Texture2D" uid="uid://5skybu2n6r2u" path="res://assets/anims/mc_idle/idle08.png" id="10_wqfne"]
[ext_resource type="Texture2D" uid="uid://du8wu3gqsfox7" path="res://assets/anims/mc_walk/walk09.png" id="11_4ni07"]
[ext_resource type="Texture2D" uid="uid://cc7d2l8iq0vye" path="res://assets/anims/mc_walk/walk10.png" id="12_l71n6"]
[ext_resource type="Texture2D" uid="uid://4d46yjcety3h" path="res://assets/anims/mc_walk/walk11.png" id="13_ke2ow"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jej6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_a38lo")
}, {
"duration": 1.0,
"texture": ExtResource("3_4ni07")
}, {
"duration": 1.0,
"texture": ExtResource("4_l71n6")
}, {
"duration": 1.0,
"texture": ExtResource("5_ke2ow")
}, {
"duration": 1.0,
"texture": ExtResource("6_ujl30")
}, {
"duration": 1.0,
"texture": ExtResource("7_31cv2")
}, {
"duration": 1.0,
"texture": ExtResource("8_pf23h")
}, {
"duration": 1.0,
"texture": ExtResource("9_dt7fs")
}, {
"duration": 1.0,
"texture": ExtResource("10_wqfne")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_31cv2")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f1ej7")
}, {
"duration": 1.0,
"texture": ExtResource("3_oprun")
}, {
"duration": 1.0,
"texture": ExtResource("4_a8ls1")
}, {
"duration": 1.0,
"texture": ExtResource("5_qfm1y")
}, {
"duration": 1.0,
"texture": ExtResource("6_fulsm")
}, {
"duration": 1.0,
"texture": ExtResource("7_4r5pv")
}, {
"duration": 1.0,
"texture": ExtResource("8_60mlk")
}, {
"duration": 1.0,
"texture": ExtResource("9_i4ail")
}, {
"duration": 1.0,
"texture": ExtResource("10_a38lo")
}, {
"duration": 1.0,
"texture": ExtResource("11_4ni07")
}, {
"duration": 1.0,
"texture": ExtResource("12_l71n6")
}, {
"duration": 1.0,
"texture": ExtResource("13_ke2ow")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f1ej7"]
radius = 5.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_jej6c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jej6c")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 11)
shape = SubResource("CircleShape2D_f1ej7")

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="dash_again_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
